--- a/src/components/comingsoon/comingsoon.css
+++ b/src/components/comingsoon/comingsoon.css
@@ -31,7 +31,7 @@ body, html {
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('../assets/images/bgImage.png') no-repeat center center/cover;
+    background: url('../../assets/images/bgImage.png') no-repeat center center/cover;
     filter: blur(2px); /* Adjust the blur effect */
     opacity: 0.6; /* Makes the logo faintly visible */
     z-index: -1; /* Places the background behind other elements */
