--- a/src/components/layout/navbar/Navbar.css
+++ b/src/components/layout/navbar/Navbar.css
@@ -15,4 +15,5 @@
     font-size: 15px; /* Optional: Adjust font size for links */
     /* margin: 0 10px; Add spacing between links÷÷ */
     margin-left: 10px;
+    font-weight: 500;
   }
