--- a/src/components/comingsoon/comingsoon.css
+++ b/src/components/comingsoon/comingsoon.css
@@ -6,11 +6,11 @@
 }
 
 body, html {
-    width: 100%;
-    height: 100%;
+    /* width: 100%; */
+    /* height: 100%; */
     font-family: Arial, Helvetica, sans-serif;
     color: white;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .container {
