--- a/src/components/layout/navbar/Navbar.css
+++ b/src/components/layout/navbar/Navbar.css
@@ -7,7 +7,7 @@
     border-radius: 25px; /* Make the button rounded */
     padding: 10px 20px; /* Adjust padding for better appearance */
     font-size: 16px; /* Adjust font size */
-    background-color: darkslateblue;
+    background-color: #070030;
 
   }
   
