--- a/src/components/about us/About.css
+++ b/src/components/about us/About.css
@@ -1,3 +1,6 @@
+.about{
+  margin-top: 100px;
+}
 .tagline2 {
   font-weight: 100;
 }
@@ -9,33 +12,158 @@
   color: #040018;
 }
 .icon_text {
-    display: flex;
-    align-items: center; /* Align items vertically */
-    justify-content: center; /* Align items horizontally */
-    gap: 10px; /* Space between the icon and the text */
-  }
+  display: flex;
+  align-items: center; /* Align items vertically */
+  justify-content: center; /* Align items horizontally */
+  gap: 10px; /* Space between the icon and the text */
+}
+
+.icon-img {
+  width: 40px; /* Set desired width */
+  height: 40px; /* Set desired height to maintain a consistent size */
+  object-fit: contain; /* Maintain the aspect ratio */
+}
+.icon-img1 {
+  width: 45px; /* Set desired width */
+  height: 45px; /* Set desired height to maintain a consistent size */
+  object-fit: contain; /* Maintain the aspect ratio */
+}
+
+.icon_cont {
+  display: flex;
+  flex-direction: row; /* Stack the icon_text divs */
+  gap: 20px; /* Add spacing between each icon_text pair */
+}
+
+.elipse {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  align-items: center;
+}
+.about_icon {
+  width: 25px;
+  height: 25px;
+  object-fit: contain;
+  padding-bottom: 5px;
+}
+
+.about-image {
+  max-width: 100%;
+}
+.marq1{
+  height: 250px;
+  margin-top: -70px;
+}
+.marq2{
+  height: 250px;
+  margin-top: -10px;
+}
+
+.marquee-container1 {
+
+  width: 100%;
+  overflow: hidden;
+  /* background-color: #040016; */
+  white-space: nowrap;
+  position: relative;
+  height: 250px;
+  margin-top: -70px;
+}
+/* .bank_head{
+  z-index: 2;
+} */
+.marquee-content1 {
+  display: inline-block;
+  animation: marquee-scroll 10s linear infinite;
+}
+.marquee-content1 img {
+  width: 100%;  /* Set the width of the image (adjust if needed) */
+  height: auto; /* Maintain aspect ratio of the image */
+}
+.marquee-container2 {
   
-  .icon-img {
-    width: 40px; /* Set desired width */
-    height: 40px; /* Set desired height to maintain a consistent size */
-    object-fit: contain; /* Maintain the aspect ratio */
+  width: 100%;
+  overflow: hidden;
+  /* background-color: #040016; */
+  white-space: nowrap;
+  position: relative;
+  height: 100px;
+  margin-top: -10px;
+}
+/* .bank_head{
+  z-index: 2;
+} */
+.marquee-content2 {
+  display: inline-block;
+  animation: marquee-scroll 10s linear infinite;
+}
+.marquee-content2 img {
+  width: 100%;  /* Set the width of the image (adjust if needed) */
+  height: auto; /* Maintain aspect ratio of the image */
+}
+@keyframes marquee-scroll {
+  0% {
+    transform: translateX(0);
   }
-  
-  .icon_cont {
-    display: flex;
-    flex-direction: row; /* Stack the icon_text divs */
-    gap: 20px; /* Add spacing between each icon_text pair */
+  100% {
+    transform: translateX(-100%);
   }
-  
-  .elipse{
+}
+/* .vid_margin{
+  margin-left: 50px;
+} */
+@media screen and (max-width: 767px) {
+  .about_cont {
+    text-align: center;
+    width: auto;
+  }
+  .elipse {
     display: flex;
     flex-direction: row;
     gap: 10px;
     align-items: center;
+    justify-content: center;
   }
-  .about_icon{
-    width: 25px; 
-    height: 25px; 
-    object-fit: contain;
-    padding-bottom: 5px;
+  .vid {
+    width: 100%;
+    height: 100%;
   }
+  .icon_cont {
+    display: flex;
+    flex-direction: column; /* Stack the icon_text divs */
+    gap: 20px;
+  }
+  .icon_text {
+    display: flex;
+    align-items: center; /* Align items vertically */
+    justify-content: space-center; /* Align items horizontally */
+    gap: 10px; /* Space between the icon and the text */
+    font-size: 15px;
+  }
+  .marquee-container1{
+    width: 100%;
+    overflow: hidden;
+    white-space: nowrap;
+    position: relative;
+    height: 100px;
+    margin-top: 5px;
+    margin-bottom: 50px;
+    /* object-fit: cover; */
+    /* margin-top: -70px; */
+  }
+  .marquee-container2 {
+  
+    width: 100%;
+    overflow: hidden;
+    /* background-color: #040016; */
+    white-space: nowrap;
+    position: relative;
+    height: 100px;
+    /* margin-top: -10px; */
+      margin-top: 40px;
+  }
+  .about{
+    margin-top: 50px;
+  }
+}
