--- a/src/components/layout/footer/Footer.css
+++ b/src/components/layout/footer/Footer.css
@@ -8,4 +8,53 @@ footer{
     max-width:100% !important;
     padding-left: 150px;
     padding-right: 150px;
+    overflow: auto;
+}
+.credits{
+    background-color: #243B8D !important;
+    /* padding-left: 150px; */
+    /* padding-right: 170px; */
+}
+.nav-logo1{ 
+    object-fit: contain;
+    width: 216px; 
+    height: 216px; 
+    padding-bottom: 5px;
+  }
+  .logo_txt{
+    margin-top: -40px;
+  }
+  .foot_col1{
+    margin-top: -30px;
+  }
+  .foot_col{
+    margin-top: 40px;
+  }
+  .socials{
+    text-align: right;
+  }
+  .me-3{
+    font-size: 25px;
+  }
+@media screen and (max-width: 767px) {
+   .footerCont{
+    align-items: center;
+    text-align: center;
+    padding-left: 50px;
+    padding-right: 50px;
+   }
+    .foot_col{
+        margin: 20px 0px;
+        font-size: 20px;
+    }
+    .foot_col1{
+        margin: 20px 0px;
+        font-size: 20px;
+    }
+    .socials{
+        margin-top: 10px;
+        text-align: center;
+        margin-left: 8px;
+      }
+    
 }
