--- a/src/components/testimonials/Testimonials.css
+++ b/src/components/testimonials/Testimonials.css
@@ -9,7 +9,55 @@
     padding: 20px; 
     background-color: #fff; 
   }
-  
+  .testi_img{
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
+  }
+  .reviews_png1{
+    min-width: 250px;
+    height: 80px;
+    object-fit:cover;
+    margin-left: -50px;
+    margin-top: -20px;
+
+  }
+  .marg{
+    margin-top: -155px;
+  }
+  .testi_img1{
+    display: flex;
+    flex-direction: row;
+  }
+  .trustpilot_png1{
+    min-width: 150px;
+    height: 50px;
+    object-fit:cover;
+    margin-left: -24px;
+    margin-right: -24px;
+    margin-top: -10px;
+  }
+  .test_cont{
+    text-align: end;
+  }
+  @media screen and (max-width: 767px){
+    .marg{
+      margin-top: 0px;
+    }
+    .testi_img1{
+      max-width: 300px;
+      margin-left: -30px;
+    }
+    .testi_img{
+      display: flex;
+      flex-direction: column;
+    }
+    .test_cont{
+      text-align: center;
+      /* margin-top: 20px; */
+    }
+    
+  }
   /* .container {
     max-width: 100%;
     overflow-x: auto; 
