--- a/src/components/about us/About.css
+++ b/src/components/about us/About.css
@@ -111,7 +111,7 @@
   }
 }
 /* .vid_margin{
-  margin-left: 50px;
+  width: 100%;
 } */
 @media screen and (max-width: 767px) {
   .about_cont {
@@ -143,12 +143,12 @@
   }
   .marquee-container1{
     width: 100%;
-    overflow: hidden;
+    overflow: visible;
     white-space: nowrap;
     position: relative;
     height: 100px;
-    margin-top: 5px;
-    margin-bottom: 50px;
+    margin-top: -35px;
+    margin-bottom: 80px;
     /* object-fit: cover; */
     /* margin-top: -70px; */
   }
@@ -161,7 +161,7 @@
     position: relative;
     height: 100px;
     /* margin-top: -10px; */
-      margin-top: 40px;
+      margin-top: 25px;
   }
   .about{
     margin-top: 50px;
