--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -107,8 +107,8 @@ h1 {
     display: block;
   }
   .hero-container{
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-left: 5px;
+    margin-right: 5px;
   }
   .hero-image{
     display: none;
@@ -124,7 +124,7 @@ h1 {
     min-width: 150px;
     height: 50px;
     object-fit:cover;
-    margin-left: 24px;
+    /* margin-left: 24px; */
     margin-right: -24px;
     margin-top: -10px;
     margin-bottom: 10px;
