--- a/src/components/testimonials/Testimonials.css
+++ b/src/components/testimonials/Testimonials.css
@@ -18,7 +18,7 @@
     min-width: 250px;
     height: 80px;
     object-fit:cover;
-    margin-left: -50px;
+    margin-left: -55px;
     margin-top: -20px;
 
   }
@@ -46,7 +46,7 @@
     }
     .testi_img1{
       max-width: 300px;
-      margin-left: -30px;
+      /* margin-left: -30px; */
     }
     .testi_img{
       display: flex;
@@ -56,7 +56,14 @@
       text-align: center;
       /* margin-top: 20px; */
     }
-    
+    .reviews_png1{
+      min-width: 250px;
+      height: 80px;
+      object-fit:cover;
+      margin-left: -30px;
+      margin-top: -20px;
+  
+    }
   }
   /* .container {
     max-width: 100%;
