--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -41,6 +41,10 @@ h1 {
   margin-left: 150px;
   margin-right: 150px;
 }
+.heroc-container {
+  margin-left: 230px;
+  margin-right: 150px;
+}
 .bg-translucent{
   background-color: white;
 }
@@ -109,6 +113,60 @@ h1 {
   100% {
     transform: translateX(-100%);
   }
+}
+.graphCont{
+  background: #fff;
+  box-shadow: 0 12px 28px rgba(189,201,210,.32);
+  border-radius: 20px;
+  padding: 1rem;
+}
+.graph_sub_cont{
+  background: #004479;
+  width: 100%;
+  height: 280px;
+  background: #d4ecff;
+  border-radius: 16px;
+  display: flex;
+  align-items: flex-end;
+  /* padding: 0px 16px 48px; */
+  transition: display 2s;
+  position: relative;
+}
+.results{
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  background: #f3fafe;
+  border-radius: 8px;
+  margin-top: 1rem;
+  padding: .5rem 1rem;
+}
+.result1{
+  text-align: center;
+  background: #f3fafe;
+  border-radius: 8px;
+}
+.result2{
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 24px;
+}
+.helper_cont{
+  margin-top: 20px;
+}
+.debt-content {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 17px;
+  text-align: center;
+  color: var(--primary-color);
+  margin: 0 0 .5rem;
+}
+.debt-helper-text-style {
+  font-size: 24px;
+  color: #040016;
+  font-weight: 700;
 }
 @media screen and (max-width: 767px){
   .hero{
