--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -6,6 +6,14 @@
     overflow: visible !important;
   
 }
+.herox{
+  display: flex;
+  align-items: center;
+  background-color: #243b8d;
+  padding-top: 80px;
+    overflow: visible !important;
+  
+}
 
 .text-content {
   text-align: left;
@@ -145,12 +153,18 @@ h1 {
   text-align: center;
   background: #f3fafe;
   border-radius: 8px;
+  padding: 10px;
+  margin-right: 20px; /* Add some space between the two elements */
+  padding-right: 20px; 
 }
 .result2{
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
   line-height: 24px;
+}
+.result1:not(:last-child) {
+  border-right: 2px solid #ccc;
 }
 .helper_cont{
   margin-top: 20px;
@@ -168,6 +182,33 @@ h1 {
   color: #040016;
   font-weight: 700;
 }
+.custom-barchart rect:nth-child(1) {
+  fill: #5e7ae2 !important;  /* Make the first bar white */
+  /* color: white; */
+}
+
+.custom-barchart rect:nth-child(2) {
+  fill: rgb(245, 56, 39) !important;  /* Make the second bar black */
+}
+.custom-barchart rect {
+  rx: 8px !important;  /* Radius for rounded corners */
+  ry: 8px !important;  /* Radius for rounded corners */
+}
+/* .custom-barchart svg rect[x="withCredSettle"] {
+  width: 20px !important;  
+}
+
+.custom-barchart svg rect[x="withoutCredSettle"] {
+  width: 30px !important;  
+} */
+/* .custom-barchart svg rect:nth-of-type(1) {
+  transform: scaleX(0.5) !important; 
+}
+
+
+.custom-barchart svg rect:nth-of-type(2) {
+  transform: scaleX(0.5) !important; 
+} */
 @media screen and (max-width: 767px){
   .hero{
     display: block;
@@ -176,12 +217,22 @@ h1 {
     margin-left: 5px;
     margin-right: 5px;
   }
+  .heroc-container {
+    margin-left: 5px;
+    margin-right: 5px;
+    max-width:calc(100% - 10px);;
+
+  }
   .hero-image{
     display: none;
   }
   .text-content{
     text-align: center;
     margin-bottom: 40px;
+  }
+  .text-content1{
+    text-align: center;
+    /* margin-bottom: 40px; */
   }
   .strap{
     display: none;
@@ -200,5 +251,9 @@ h1 {
     font-weight: bold;
     color: white;
     margin: 20px 0;
+  }
+  .herox{
+    display: flex;
+    flex-direction: column;
   }
 }
