--- a/src/components/Whyus/Whyus.css
+++ b/src/components/Whyus/Whyus.css
@@ -51,3 +51,22 @@
         line-height: 45px;
     }
 }
+.faq-section {
+    min-width: 100%;
+  }
+  
+  .faq-container {
+    max-width: 100%;
+    padding: 20px;
+  }
+  
+  @media (max-width: 768px) {
+    .faq-container {
+      padding: 15px;
+      max-width: 400px;
+    }
+    .faq-item {
+      padding: 15px;
+    }
+  }
+  
