--- a/src/components/services/personalloan/personalloan.css
+++ b/src/components/services/personalloan/personalloan.css
@@ -78,6 +78,12 @@
       max-width: 90%;
       margin: 0 auto;
     }
+    .container7 {
+      background-color: white !important;
+      display: block !important;
+      padding-left: 20px;
+      padding-right: 20px;
+    }
   }
   .container7 {
     background-color: white !important;
