--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,13 @@
-html, body {
-    height: 100%; /* Ensure the body spans the full height */
-    margin: 0;
-    overflow-y: auto; /* Enable vertical scrolling */
-    font-family: "Urbanist" !important;
-    scroll-behavior: smooth;
-  }
-  h1{
-    font-family: "Urbanist" !important;
-    font-weight: 700 !important;
-    text-shadow: none !important;
-  }
-  
+html,
+body {
+  height: 100%; /* Ensure the body spans the full height */
+  margin: 0;
+
+  font-family: "Urbanist" !important;
+  scroll-behavior: smooth;
+}
+h1 {
+  font-family: "Urbanist" !important;
+  font-weight: 700 !important;
+  text-shadow: none !important;
+}
