--- a/src/components/testimonials/Testimonials.css
+++ b/src/components/testimonials/Testimonials.css
@@ -33,8 +33,7 @@
     min-width: 150px;
     height: 50px;
     object-fit:cover;
-    margin-left: -60px;
-    margin-right: -24px;
+
     margin-top: -10px;
   }
   .test_cont{
@@ -46,6 +45,10 @@
     }
     .testi_img1{
       max-width: 300px;
+      display: flex;
+      flex-direction: row;
+      justify-content:space-around;
+
       /* margin-left: -30px; */
     }
     .testi_img{
@@ -60,7 +63,6 @@
       min-width: 250px;
       height: 80px;
       object-fit:cover;
-      margin-left: -30px;
       margin-top: -20px;
   
     }
