--- a/src/components/layout/footer/Footer.css
+++ b/src/components/layout/footer/Footer.css
@@ -6,9 +6,12 @@ footer{
     background-color: #243B8D !important;
     height: auto !important;
     max-width:100% !important;
-    padding-left: 150px;
-    padding-right: 150px;
+    padding-left: 5%;
+    padding-right: 5%;
     overflow: auto;
+}
+.company_col{
+  margin-right: -85px;
 }
 .credits{
     background-color: #243B8D !important;
@@ -53,6 +56,9 @@ footer{
     .foot_col1{
         margin: 20px 0px;
         
+    }
+    .company_col{
+      margin: 0;
     }
     .foot_head{
       font-size: 24px !important;
