--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -132,6 +132,27 @@ h1 {
     transform: translateX(-100%);
   }
 }
+.marquee-container {
+  overflow: hidden;
+  width: 100%;
+}
+
+.marquee-swiper {
+  display: flex;
+  align-items: center;
+}
+
+.marquee-slide {
+  width: auto !important;
+  display: flex;
+  justify-content: center;
+}
+
+.marquee-image {
+  height: 50px; /* Adjust size as needed */
+  width: auto;
+}
+
 .marquee-container5 {
   width: 100%;
   background-color: #C0B3F7;
