--- a/src/components/blog/Blog.css
+++ b/src/components/blog/Blog.css
@@ -68,7 +68,7 @@
 .blog-image {
   width: 100%;
   height: 100%;
-  object-fit: contain;  /* This ensures the image covers the container area without distorting its aspect ratio */
+  object-fit: contain; 
 }
 /* .blog-image1 {
   width: 100%;
