--- a/src/components/contact us/form.css
+++ b/src/components/contact us/form.css
@@ -1,7 +1,7 @@
 .row1 {
   background-color: #243b8d;
   /* width: 80%; */
-  max-width: 600px; /* Limit max width */
+  max-width: 600px;
   margin: 50px auto; /* Centers the form vertically with spacing */
   padding: 30px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
