--- a/src/components/calculator/calculator.css
+++ b/src/components/calculator/calculator.css
@@ -24,6 +24,8 @@ input[type="range"] {
     display: flex;
     flex-direction: row;
     margin-top: 20px;
+    width: 50%;
+    text-align: center;
   }
   .missedEMI .form-check {
     border: 1px solid #ccc;
