--- a/src/components/thanks/Thanks.css
+++ b/src/components/thanks/Thanks.css
@@ -2,3 +2,14 @@
     display: flex;
     flex-direction: row;
 }
+.row2 {
+    /* background-color: #243b8d; */
+    width: 80%;
+    max-width: 600px;
+    margin: 30px auto;
+    /* padding: 30px; */
+    /* box-shadow: 0 0 20px rgba(0, 0, 0, 0.1); */
+    border-radius: 10px;
+    text-align: center;
+    color: white;
+  }
