--- a/src/components/about us/About.css
+++ b/src/components/about us/About.css
@@ -4,9 +4,9 @@
 .tagline2 {
   font-weight: 100;
 }
-.about_cont {
-  width: 550px;
-}
+/* .about_cont {
+  width: 100%;
+} */
 .tagline3 {
   font-weight: 900;
   color: #040018;
@@ -101,6 +101,10 @@
 .marquee-content2 img {
   width: 100%;  /* Set the width of the image (adjust if needed) */
   height: auto; /* Maintain aspect ratio of the image */
+}
+.vid{
+  width: 100%;
+  height: 100%;
 }
 @keyframes marquee-scroll {
   0% {
