--- a/src/components/layout/footer/Footer.css
+++ b/src/components/layout/footer/Footer.css
@@ -23,6 +23,7 @@ footer{
     width: 216px; 
     height: 216px; 
     padding-bottom: 5px;
+    margin-left: -30px;
   }
   .logo_txt{
     margin-top: -40px;
